--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,8 +1,7 @@
 <h1>LOGIN</h1>
-
 <% if (messages.error) { %>
-    <%= (messages.error) %>
-    <% } %> 
+    <%= messages.error %>
+  <% } %>
 <form action="/login" method="POST">
 <div>
     <label for="email">Email</label>
