added dashboard route

--- a/views/edit-user.handlebars
+++ b/views/edit-user.handlebars
@@ -1,7 +1,7 @@
 <article>
   <a href="/dashboard"> &larr; Back to dashboard</a>
   <h2>
-    Update My Information
+    Update My Profile
   </h2>
   <form class="edit-user-form">
     <div>
