--- a/views/partials/user-info.handlebars
+++ b/views/partials/user-info.handlebars
@@ -1,5 +1,5 @@
     <article class="post">
       <div class = "content">
-        <a href="/dashboard/edituser">Edit My Info</a>
+        <a href="/dashboard/edituser">Edit My Profile</a>
       </div>
     </article>
