homepage route and css and styling for it

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,12 +15,12 @@
         <a href="/">Messenger App</a>
       </h1>
         <nav>
-          <span><a href="/">home</a></span> 
+          <span><a href="/">Home</a></span> 
           {{#if loggedIn}}
-          <a href="/dashboard">dashboard</a>
-          <button id="logout" class="btn-no-style">logout</button>
+          <a href="/dashboard">Dashboard</a>
+          <button id="logout" class="btn-no-style">Logout</button>
           {{else}}
-          <a href="/login">login</a>
+          <a href="/login">Login</a>
           {{/if}}
         </nav>
     </header>
@@ -28,7 +28,7 @@
       {{{ body }}}
     </main>
     <footer>
-      This is the footer
+      Team name eventually
     </footer>
   </div>
 
