--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -8,13 +8,18 @@
     margin: 0;
     font-family: sans-serif;
     color: #333;
+    background: #000;
   }
   
   a {
     text-decoration: none;
-    color: #225ca3;
+    color:  #ed2b12;
     font-weight: bold;
     transition: color .1s;
+  }
+
+  nav a {
+    padding: 5px;
   }
   
   a:hover {
@@ -175,4 +180,112 @@
     justify-content: center;
     padding: 1%;
     font-size: 110%;
+  }
+
+/* home page css */
+
+  .st {
+    width: 625px;
+    margin: 6rem auto 3rem auto;
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 8rem;
+    font-family: 'ITC Benguiat W01';
+    font-weight: 800;
+    color: #1c0502;
+    text-shadow: -0.05rem -0.05rem 1px #ed2b12,
+      0.05rem -0.05rem 1px #ed2b12,
+      -0.05rem 0.05rem 1px #ed2b12,
+      0.05rem 0.05rem 1px #ed2b12,
+      0 0 15px #630100,
+      0 0 20px #450100;
+    letter-spacing: -2px;
+  }
+  
+  .st p {
+    display: inline-block;
+    margin: 0;
+  }
+  
+  .st-bound {
+    box-shadow: -0.05rem -0.05rem 2px #ed2b12,
+      0.05rem -0.05rem 2px #ed2b12,
+      -0.05rem 0.05rem 2px #ed2b12,
+      0.05rem 0.05rem 2px #ed2b12;
+    height: 5px;
+  }
+  
+  .st-bound-full {
+    width: 100%;
+    margin: auto;
+    margin-bottom: -1.2rem;
+    max-width: 612px;
+    margin-left: 5px;
+  }
+  
+  .st-bound-mini {
+    margin-top: 0.5rem;
+  }
+  
+  .st-bound-left {
+    float: left;
+    width: 99px;
+    position: relative;
+    left: 5px;
+  }
+  
+  .st-bound-right {
+    float: right;
+    width: 103px;
+    left: 0.3rem;
+    position: relative;
+  }
+  
+  .st-bottom {
+    clear: both;
+    top: -3.75rem;
+    position: relative;
+    left: .6rem;
+    letter-spacing: 2px;
+  }
+  
+  .st-drop {
+    line-height: 0;
+    position: relative;
+    top: 1.55rem;
+  }
+  
+  .st-stranger-s {
+    font-size: 10.5rem;
+    letter-spacing: -8px;
+  }
+  
+  .st-stranger-t {
+    letter-spacing: 0;
+  }
+  
+  .st-stranger-n {
+    letter-spacing: -5px;
+  }
+  
+  .st-stranger-g {
+    letter-spacing: 0;
+  }
+  
+  .st-stranger-r-2 {
+    font-size: 10.5rem;
+    right: 0.2rem;
+  }
+  
+  .st-things-t {
+    font-size: 104%;
+    letter-spacing: 2px;
+  }
+  
+  .st-things-n {
+    letter-spacing: -5px;
+  }
+  
+  .st-things-g {
+    letter-spacing: -3px;
   }
