fixed dashboard route and rendering the correct pages glitches

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,8 +1,9 @@
-  <section>
+  <header>
+      <h1>
+        <a href="/">Join Chat Room</a>
+      </h1>
 
-    <div class = "column">
-        <h2>About Me</h2>
-        {{> user-info}}
-    </div>
+  </header>
 
-  </section>
+
+  
