--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,9 +1,7 @@
-  <header>
-      <h1>
-        <a href="/">Join Chat Room</a>
-      </h1>
+ 
+      <button onclick = > Join Chat Room </button>
 
-  </header>
+
 
 
   
