--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,6 +15,7 @@
           <span><a href="/">Home</a></span> 
           {{#if loggedIn}}
           <button id="logout" class="btn-no-style">Logout</button>
+          <button id="chat-btn-nav"> Join Chat Room </button>
           {{else}}
           <a href="/login">Login</a>
           {{/if}}
@@ -32,6 +33,8 @@
   <script src="/javascript/logout.js"></script>
   {{/if}}
 
+ <script src = "/javascript/chat-room.js"></script>
 </body>
+  
 
 </html>
