chat room displays

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,7 +12,7 @@
   <div class="wrapper">
     <header>
         <nav>
-          <span><a href="/">Home</a></span> 
+          <span><a href="/dashboard">Home</a></span> 
           {{#if loggedIn}}
           <button id="logout" class="btn-no-style">Logout</button>
           {{else}}
@@ -31,8 +31,7 @@
   {{#if loggedIn}}
   <script src="/javascript/logout.js"></script>
   {{/if}}
-
- <script src = "/javascript/chat-room.js"></script>
+  
 </body>
   
 
