--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,7 +14,8 @@
         <nav>
           <span><a href="/dashboard">Home</a></span> 
           {{#if loggedIn}}
-          <a href="/dashboard/edituser">Settings</a> 
+         <a href="/dashboard/edituser">Settings</a> 
+          </select>
           <button id="logout" class="btn-no-style">Logout</button>
           {{else}}      
           <a href="/login">Login</a>
