--- a/views/chat-room.handlebars
+++ b/views/chat-room.handlebars
@@ -7,20 +7,25 @@
   <title>Chat App</title>
 </head>
 <body>
+
+   <button id="leave-chat-btn">Leave Chat</button>
+  
   <div id="message-container"></div>
   <form id="send-container">
     <input type="text" id="message-input">
-    <button type="submit" id="send-button">Send</button>
-    <button type="submit" id="disconnect">Leave Chat Room</button>
+    <button type="submit" id="send-btn">Send</button>
   </form>
 
 
   <script src="/socket.io/socket.io.js"></script>
   <script>
-    const socket = io()
+    const socket = io({
+
+    })
     const messageContainer = document.getElementById('message-container')
     const messageForm = document.getElementById('send-container')
     const messageInput = document.getElementById('message-input')
+    const leaveChatButton = document.getElementById('leave-chat-btn')
     
     const name = prompt('What is your name?')
     appendMessage('You joined')
@@ -38,8 +43,8 @@
       appendMessage(`${name} disconnected`)
     })
     
-    messageForm.addEventListener('submit', e => {
-      e.preventDefault()
+    messageForm.addEventListener('submit', event => {
+      event.preventDefault()
       const message = messageInput.value
       appendMessage(`You: ${message}`)
       socket.emit('send-chat-message', message)
@@ -51,6 +56,11 @@
       messageElement.innerText = message
       messageContainer.append(messageElement)
     }
+
+    leaveChatButton.addEventListener('click', event => {
+      event.preventDefault();
+      socket.disconnect()
+    })
       </script>
 </body>
 </html>
