--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,7 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>DRAGONS & CHATS</title>
-   <link rel="stylesheet" href="/stylesheets/style.css">
+    <link rel="stylesheet"  href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="/stylesheets/style.css">
 </head>
 
 <body>
@@ -22,14 +23,14 @@
           {{/if}}
         </nav>
     </header>
-    <main>
+    <main class="text-center col-md-12">
       {{{ body }}}
     </main>
     <footer>
       Team name eventually
     </footer>
   </div>
-
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
   {{#if loggedIn}}
   <script src="/javascript/logout.js"></script>
   {{/if}}
