--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -70,14 +70,14 @@ form label {
   display: block;
 }
 
-.wrapper {
+/* .wrapper {
   width: 100%;
   min-height: 100%;
   max-width: 1200px;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
-}
+} */
 
 header {
   border-bottom: 1px solid #ccc;
