--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,38 +3,34 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>DRAGONS & CHATS</title>
    <link rel="stylesheet" href="/stylesheets/style.css">
 </head>
 
 <body>
-  <div class="wrapper">
-    <header>
-        <nav>
-          <span><a href="/dashboard">Home</a></span> 
-          {{#if loggedIn}}
-         <a href="/dashboard/edituser/:{{userData.id}}">Settings</a> 
-          </select>
-          <button id="logout" class="btn-no-style">Logout</button>
-          {{else}}      
-          <a href="/login">Login</a>
-          {{/if}}
-        </nav>
-    </header>
-    <main>
-      {{{ body }}}
-    </main>
-    <footer>
-     DGAS
-    </footer>
-  </div>
+        <header>
+            <nav>
+              <span><a href="/dashboard">Home</a></span> 
+              {{#if loggedIn}}
+            <a href="/dashboard/edituser/:{{userData.id}}">Settings</a> 
+              </select>
+              <button id="logout" class="btn-no-style">Logout</button>
+              {{else}}      
+              <a href="/login">Login</a>
+              {{/if}}
+            </nav>
+        </header>
+        <main>
+          {{{ body }}}
+        </main>
+        <footer>
+        DGAS
+        </footer>
 
   {{#if loggedIn}}
   <script src="/javascript/logout.js"></script>
   {{/if}}
   
 </body>
-  
-
 </html>
