user is taken back to dashboard when they leave the chat-room

--- a/views/chat-room.handlebars
+++ b/views/chat-room.handlebars
@@ -67,6 +67,8 @@
     leaveChatButton.addEventListener('click', event => {
       event.preventDefault();
       socket.disconnect()
+      window.location = "/dashboard"
+      
     })
       </script>
 </body>
