updated multiple stylesheets

--- a/views/chat-room.handlebars
+++ b/views/chat-room.handlebars
@@ -1,12 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Chat App</title>
-</head>
-<body>
+<div id="chat-room">  
   <div id="message-container"></div>
   <form id="send-container">
     <input type="text" id="message-input">
@@ -52,5 +44,4 @@
       messageContainer.append(messageElement)
     }
       </script>
-</body>
-</html>
+</div>
