--- a/views/edit-user.handlebars
+++ b/views/edit-user.handlebars
@@ -1,3 +1,4 @@
+<div id="edit-user">
 <article>
   <a href="/dashboard"> &larr; Back to dashboard</a>
   <h2>
@@ -25,3 +26,4 @@
 
 <!--Scripts-->
 <script src="/javascript/edit-user.js"></script>
+</div>
