made buttons responsive

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,5 +1,5 @@
 
-      <a href="/dashboard/chat-room">Join Chat Room Here!</a>
+      <a class="col-12 col-md-4" href="/dashboard/chat-room">Join Chat Room Here!</a>
       
 
 
