--- a/views/chat-room.handlebars
+++ b/views/chat-room.handlebars
@@ -1,14 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Chat App</title>
-</head>
-<body>
 
-   <button id="leave-chat-btn">Leave Chat</button>
+
+   <button class="col-12 col-md-4" id="leave-chat-btn">Leave Chat</button>
   
   <div id="message-container"></div>
   <form id="send-container">
@@ -70,5 +62,3 @@
       window.location = "/dashboard"
     })
       </script>
-</body>
-</html>
