--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,7 +1,7 @@
-<div class="st">
+<div class="st text-center col-md-12">
 
   <div class="st-top">
-    <div class="st-bound st-bound-full"></div>
+    <div class="st-bound st-bound"></div>
     <p><span class="st-drop st-stranger-s">D</span><span class="st-stranger-t">R</span><span class="st-stranger-r">A</span><span class="st-stranger-a">g</span><span class="st-stranger-n">o</span><span class="st-stranger-g">n</span><span class="st-stranger-e">s</span><span class="st-drop st-stranger-r-2"></span>
     </p>
     <div class="st-bound st-bound-mini st-bound-left"></div>
