--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -12,7 +12,7 @@
     <input type="password" id="password-signup" />
   </div>
   <div>
-    <button type="submit">signup</button>
+    <button type="submit" type="button" class="btn btn-outline-danger">signup</button>
   </div>
 </form>
 
