--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -8,7 +8,7 @@
       <input type="password" id="password-login" />
     </div>
     <div>
-      <button type="submit">login</button>
+      <button type="submit" type="button" class="btn btn-outline-danger">login</button>
     </div>
   </form>
   
