updated main.handlebars, updated dashboard.handlebars, updated style.css

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="/stylesheets/style.css">
 </head>
 
-<body>
+<body id="bimage">
         <header>
             <nav class = "container-fluid">
               <div class="row">
@@ -28,7 +28,9 @@
           {{{ body }}}
         </main>
         <footer>
-        DGAS
+          <p>🐉DGAS🐉</p>
+          <p>⚔️License⚔️</p>
+          <p>🔮Add that weird copyright thingy from RUNBUDDY probs🔮</p>
         </footer>
 
   {{#if loggedIn}}
