--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -241,3 +241,17 @@ footer {
 .delete-user-form {
   padding-top: 7px;
 }
+
+#bimage {
+  background-image: url(https://i.pinimg.com/originals/0b/59/34/0b5934b623f3c6f5377f221959d77982.gif);
+  padding: 0;
+  margin: 0;
+  background-size: contain;
+}
+
+#map {
+  margin-top: 2%;
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
