--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -2,14 +2,31 @@
 
       <a class="col-12 col-md-4" href="/dashboard/chat-room">Join Chat Room Here!</a>
 
-      <img id="map" src="https://i.imgur.com/cGkIV0u.png" title="source: imgur.com" usemap="#workmap"/>
+      <div id="map-and-images">
+            <img id="map" class="col-12" src="https://i.imgur.com/9kpInNH.png " title="map"/>
+            <div id="tarot">
+                  <a href="/dashboard/chat-room">
+                  <img id="artificer" class="col-4" src="https://i.imgur.com/yCX4gHh.png" alt="the artificer tarot card" />
+                  </a>
+                  <a href="/dashboard/edituser/:">
+                  <img id="paladin" class="col-4" src="https://i.imgur.com/efUBxx7.png" alt="the paladin tarot card" />
+                  </a>
+                  <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">
+                  <img id="bard" class="col-4" src="https://i.imgur.com/JE3KW56.png" alt="the bard tarot card" />
+                  </a>
+            </div>
+      </div>
 
-      <a href="dashboard/edit-user" title="" style="position: absolute; left: 38.18%; top: 12.27%; width: 18.3%; height: 28.83%; z-index: 2;"></a>
-      <a href="about-us" title="" style="position: absolute; left: 35.87%; top: 51.53%; width: 10.94%; height: 40%; z-index: 2;"></a>
-      <a href="dashboard/chat-room" title="" style="position: absolute; left: 6.26%; top: 20%; width: 25.84%; height: 63.31%; z-index: 2;"></a>
-      <a href="dashboard/edit-user" title="" style="position: absolute; left: 47.96%; top: 41.23%; width: 6.2%; height: 20.86%; z-index: 2;"></a>
-      <a href="https://roll20.net/" target="_blank" style="position: absolute; left: 71.79%; top: 17.79%; width: 21.7%; height: 44.79%; z-index: 2;"></a>
-      <a href="https://roll20.net/" target="_blank" title="" style="position: absolute; left: 58.24%; top: 17.55%; width: 13.8%; height: 77.18%; z-index: 2;"></a>
-      <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank" title="" style="position: absolute; left: 74.95%; top: 67.73%; width: 10.94%; height: 9.82%; z-index: 2;"></a>
 
 </div> 
+
+
+{{!-- https://i.imgur.com/SPsSvd3.png - the card master
+https://i.imgur.com/8YwrLVK.png - the dm
+USED https://i.imgur.com/efUBxx7.png - pally
+USED https://i.imgur.com/yCX4gHh.png - artificer
+USED https://i.imgur.com/JE3KW56.png - bard
+https://i.imgur.com/FNmKnya.png - open journal
+
+https://www.youtube.com/watch?v=dQw4w9WgXcQ -rickroll
+https://roll20.net/ -r20 --}}
