--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -19,7 +19,7 @@ a {
 }
 
 nav a {
-  padding: 5px;
+  padding: 5px 5px 5px 5px;
 }
 
 a:hover {
@@ -255,3 +255,5 @@ footer {
   height: 100%;
   object-fit: contain;
 }
+
+
