--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,25 +15,17 @@
 
            
               <div class= "d-flex flex-row bd-highlight mb-3">
-                <a class="p-2 bd-highlight" href="/dashboard">Home</a></span> 
                 {{#if loggedIn}}
-                <a class="p-2 bd-highlight" href="/dashboard/edituser/:{{userData.id}}">Settings</a> 
                 <a class="p-2 bd-highlight" id="logout" href="/login" >Logout</button>
                 {{else}}      
                 <a class="p-2 bd-highlight" href="/login">Login</a>
                 {{/if}}
                </div>
            
-
+{{!-- 
             <nav>
               <ul class="nav nav-pills">
-                <li class="nav-item">
-              <span><a class="nav-link" href="/dashboard">Home</a></span> 
-              </li>
-              <li class="nav-item">
               {{#if loggedIn}}
-            <a class="nav-link" href="/dashboard/edituser/:{{userData.id}}">Settings</a> 
-              </li>
               </select>
               <button id="logout" class="btn-no-style">Logout</button>
               {{else}}    
@@ -42,7 +34,7 @@
               </li>
               {{/if}}
               </ul>
-            </nav>
+            </nav> --}}
             
         </header>
         <main class="text-center col-md-12">
