--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -17,7 +17,7 @@
                 <span class="btn btn-sm btn-primary" width=""><a href="/dashboard">Home</a></span> 
                 {{#if loggedIn}}
                 <a class="col-12 col-md-4" href="/dashboard/edituser/:{{userData.id}}">Settings</a> 
-                <button class="col-12 col-md-4" id="logout" class="btn-no-style col-12 col-md-4 col">Logout</button>
+                {{!-- <button class="col-12 col-md-4" id="logout" class="btn-no-style col-12 col-md-4 col">Logout</button> --}}
                 {{else}}      
                 <a class= "btn btn-sm btn-primary" href="/login">Login</a>
                 {{/if}}
