moved logout button to only dashboard page

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,7 +1,7 @@
 <div id="dashboard">
 
       
-
+       <a class="p-2 bd-highlight" id="logout" href="/login" >Logout</button>
       <img id="map" src="https://i.imgur.com/cGkIV0u.png" title="source: imgur.com" usemap="#workmap"/>
 
       <a href="/dashboard/edituser/:{{userData.id}}" title="" style="position: absolute; left: 38.18%; top: 12.27%; width: 18.3%; height: 28.83%; z-index: 2;"></a>
