--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -16,7 +16,7 @@
            
               <div class= "d-flex flex-row bd-highlight mb-3">
                 {{#if loggedIn}}
-                <a class="p-2 bd-highlight" id="logout" href="/login" >Logout</button>
+                {{!-- <a class="p-2 bd-highlight" id="logout" href="/login" >Logout</button> --}}
                 {{else}}      
                 <a class="p-2 bd-highlight" href="/login">Login</a>
                 {{/if}}
